--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cucumber-html-report",
   "description": "Generate HTML reports from Cucumber json reports",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/leinonen/grunt-cucumber-html-report",
   "author": {
     "name": "Peter Leinonen",
@@ -28,11 +28,11 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "mustache": "^2.2.0"
+    "cucumber-html-report": "^0.1.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "^0.9.2"    
+    "grunt-contrib-jshint": "^0.9.2"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
